--- a/BinaryBytesPhone/src/main/res/values/colors.xml
+++ b/BinaryBytesPhone/src/main/res/values/colors.xml
@@ -29,4 +29,21 @@
     <color name="trans_dark_high_twice">#c80a0f18</color>
 
     <color name="transparent">@android:color/transparent</color>
+
+
+    <color name="blue">#0070AD</color>
+    <color name="gold">#e7c300</color>
+    <color name="color4">#ffcfc4</color>
+    <color name="color8">#ffb4a3</color>
+    <color name="color16">#ff866b</color>
+    <color name="color32">#ff6542</color>
+    <color name="color64">#e2401b</color>
+    <color name="color128">#e7c300</color>
+    <color name="color512">#FFD700</color>
+    <color name="trans_black">#b400162F</color>
+    <color name="trans_black_high">#4b00162F</color>
+    <color name="trans_black_high_twice">#8000162F</color>
+    <color name="gplus">#DD4D40</color>
+    <color name="twitter">#5EA9DD</color>
+    <color name="facebook">#334E99</color>
 </resources>
