--- a/BinaryBytesWatch/src/main/res/values/style.xml
+++ b/BinaryBytesWatch/src/main/res/values/style.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="GeeksEmpire" parent="@android:style/Theme.DeviceDefault.Light">
+    <style name="GeeksEmpire" parent="@style/Theme.AppCompat.Light.NoActionBar">
         <item name="android:colorPrimary">@color/default_color</item>
         <item name="android:colorPrimaryDark">@color/default_color</item>
         <item name="android:colorAccent">@color/default_color</item>
 
+        <item name="android:windowSwipeToDismiss">false</item>
 
         <item name="android:windowBackground">@drawable/splash_screen</item>
     </style>
 
-    <style name="AppTheme" parent="@android:style/Theme.DeviceDefault.Light">
+    <style name="AppTheme" parent="@style/Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowSwipeToDismiss">false</item>
+
+        <item name="android:windowBackground">@drawable/splash_screen</item>
     </style>
 
 </resources>
