--- a/BinaryBytesPhone/src/main/res/layout/game_activity.xml
+++ b/BinaryBytesPhone/src/main/res/layout/game_activity.xml
@@ -22,7 +22,7 @@
         android:visibility="invisible" />
 
     <FrameLayout
-        android:id="@+id/gamePlayView"
+        android:id="@+id/gamePlayViewHolder"
         android:layout_width="match_parent"
         android:layout_height="457dp"
         android:layout_alignParentBottom="true"
